--- a/front_end/templates/search_results.html
+++ b/front_end/templates/search_results.html
@@ -2,7 +2,7 @@
 
 <tr>
     <td>
-        <a href="{{ result['url'] }}">{{ result['title'] }}</a>
+        <a href="{{ result['url'] }}" target="_blank">{{ result['title'] }}</a>
     </td>
 </tr>
 
