Add related results option; delay checkbox updates

--- a/front_end/templates/index.html
+++ b/front_end/templates/index.html
@@ -112,6 +112,15 @@
                             checked> PageRank
                     </label>
                 </div>
+                <div class="checkbox">
+                    <label>
+                        <input 
+                            type="checkbox" 
+                            id="related_results" 
+                            name="r" 
+                            value="related_results"> Related Results
+                    </label>
+                </div>
             </div>
         </form>
     </div>
